--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".vim/bundle/nerdtree"]
 	path = .vim/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree
+[submodule ".vim/bundle/colorscheme-molokai"]
+	path = .vim/bundle/colorscheme-molokai
+	url = https://github.com/tomasr/molokai
